# fw4spl-ar-deps

./: .hgignore  .hgtags  CMakeLists.txt  README.md
aram/: CMakeLists.txt
artoolkitplus/: CMakeLists.txt
artoolkitplus/patch/: Camera.cpp  rppMultiGetTransMat.cpp
artoolkitplus/patch/debug/: CMakeLists.txt
artoolkitplus/patch/release/: CMakeLists.txt
aruco/: CMakeLists.txt
aruco/patch/: markerdetector.diff
aruco/patch/android/: CMakeLists.txt  Main_CMakeLists.txt  Src_CMakeLists.txt  android.diff
bullet/: CMakeLists.txt
cmake/: patch.cmake
cmake/findBinpkgs/: FindArtoolkitplus.cmake  FindAruco.cmake  FindBullet.cmake  FindOpenNI.cmake  FindOpenNI2.cmake  fw-vlfeat.cmake
cmake/utils/: patch.cmake
eigen/: CMakeLists.txt
eigen/patch/: EigenConfigureTesting.diff  EigenTesting.cmake  EigenTesting.diff
flann/: CMakeLists.txt
flann/patch/: CMakeLists.txt
freeglut/: CMakeLists.txt
freeimage/: CMakeLists.txt
geodesic/: CMakeLists.txt
glew/: CMakeLists.txt
glew/patch/: CMakeLists.txt
glext/: CMakeLists.txt
glm/: CMakeLists.txt
igstkAurora/: CMakeLists.txt
infinitam/: CMakeLists.txt
libfreenect/: CMakeLists.txt
libusb/: CMakeLists.txt
ndkgui/: CMakeLists.txt
ogre/: CMakeLists.txt
ogre/cmake/: fw-Ogre.cmake
ogre/patch/: CMakeLists.txt  FindOGRE.patch  OgreConfigTargets.cmake  OgreConfigTargets.patch  fix-1.9-HEAD.patch  fix-GL3Plus-firstRender.patch  fix-GL3Plus.patch  ogreWin32Window.patch
ogre/patch/OSX/: fix-1.9-HEAD.patch  ogre1.9.patch
ois/: CMakeLists.txt
ois/patch/: CMakeLists.txt  osx_fix.patch
opencv/: CMakeLists.txt
opencv/patch/: CMakeLists.txt  android.diff  calibfilter.cpp.diff
opencv/patch/data/: CMakeLists.txt
openni/: CMakeLists.txt
openni/patches/: Makefile
openni/patches/PS1080/: Makefile
openni/patches/PSLink/: Makefile
orbslam2/: CMakeLists.txt
pangolin/: CMakeLists.txt
pangolin/patch/: CMakeLists.diff
pcl/: CMakeLists.txt
pcl/patch/: CMakeLists.diff  CMakeLists.txt  pcl_find_boost.cmake
pcl/patch/io/: CMakeLists.txt
pcl/patch/tools/: CMakeLists.txt
realsense/: CMakeLists.txt
sofa/: CMakeLists.txt  install.cmake
sofa/patch/: CMakeParseLibraryList.cmake  FindSOFA.cmake  SofaGuiConfig.cmake.in  custom_options.cmake  dependencies.cmake  find_lib.cmake  sofa.patch
sofa/patch/SofaGui/: CMakeLists.txt
sofa/patch/boost/: CMakeLists.txt
sofa/patch/eigen/: CMakeLists.txt
tango/: CMakeLists.txt
vlc/: CMakeLists.txt
vlfeat/: CMakeLists.txt  vlfeat_linux.cmake  vlfeat_windows.cmake
vlfeat/patch/: AddedVC2013.diff  ConditionalMex.diff
zzip/: CMakeLists.txt
