cmake_minimum_required(VERSION 3.3)

project(ArBinPkgs)

option(ENABLE_EXPERIMENTAL_DEPS "Set to ON to build experimentals libraries" OFF)
option(ENABLE_OPEN_MP "Set to ON use allow the use of OpenMP" OFF)
option(ENABLED_OGRE_DEPS "Set to ON to build ogre" OFF)
option(ENABLED_SOFA_DEPS "Set to ON to build sofa" OFF)
option(ENABLED_PCL_DEPS "Set to ON to build PCL" OFF)
option(ENABLED_BUILD_REALSENSE "Set to ON to build libRealSense" OFF)

##Desktop Deps##
if(NOT ANDROID)
    list(APPEND SUBDIRECTORIES opencv)
    list(APPEND SUBDIRECTORIES aruco)
    list(APPEND SUBDIRECTORIES eigen)
    list(APPEND SUBDIRECTORIES flann)
    list(APPEND SUBDIRECTORIES bullet)
    list(APPEND SUBDIRECTORIES geodesic)
    list(APPEND SUBDIRECTORIES vlfeat)

    if(UNIX AND NOT APPLE)
        list(APPEND SUBDIRECTORIES vlc)
    endif()

    if(ENABLED_OGRE_DEPS)
        list(APPEND SUBDIRECTORIES zzip)
        list(APPEND SUBDIRECTORIES freeimage)
        list(APPEND SUBDIRECTORIES ogre)
    endif()

    if(ENABLED_SOFA_DEPS)
        list(APPEND SUBDIRECTORIES glew)
        if (NOT APPLE)
            list(APPEND SUBDIRECTORIES freeglut)
        endif()
        list(APPEND SUBDIRECTORIES glext)
        list(APPEND SUBDIRECTORIES sofa)
    endif()

    if(ENABLED_PCL_DEPS)
        if(UNIX)
            list(APPEND SUBDIRECTORIES libusb)
        endif()
        list(APPEND SUBDIRECTORIES openni)
        if(UNIX)
            list(APPEND SUBDIRECTORIES libfreenect)
        endif()
        list(APPEND SUBDIRECTORIES pcl)
    endif()
    
    if(ENABLED_BUILD_REALSENSE)
        if (NOT ENABLED_PCL_DEPS AND UNIX)
            # On Linux and OSX, libusb is required by libRealSense
            list(APPEND SUBDIRECTORIES libusb)
        endif()
        list(APPEND SUBDIRECTORIES realsense)
        list(APPEND SUBDIRECTORIES infinitam)
    endif()
    
    if(ENABLE_EXPERIMENTAL_DEPS)
        list(APPEND SUBDIRECTORIES artoolkitplus)
        list(APPEND SUBDIRECTORIES aram)
        # igstkAurora does not compile, at least on windows, and it is not used (or so have I been told), so just SKIP this !
        #list(APPEND SUBDIRECTORIES igstkAurora)
    endif()
##Android Deps##
else()
    list(APPEND SUBDIRECTORIES opencv)
    list(APPEND SUBDIRECTORIES aruco)
    if(ENABLE_EXPERIMENTAL_DEPS)
        list(APPEND SUBDIRECTORIES ndkgui)
        list(APPEND SUBDIRECTORIES tango)
    endif()
    if(ENABLED_PCL_DEPS)
        list(APPEND SUBDIRECTORIES flann)
        list(APPEND SUBDIRECTORIES eigen)
        list(APPEND SUBDIRECTORIES pcl)
    endif()
endif()

get_filename_component(CURRENT_DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
foreach(subdir ${SUBDIRECTORIES})

    createUninstallTarget(${subdir})
    createCleanTarget(${subdir})

    add_subdirectory(${subdir})
endforeach()
